--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 	<servlet>
 		<servlet-name>Add Speaker</servlet-name>
 		<servlet-class>controller.SpeakerController</servlet-class>
@@ -12,7 +12,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Add Speaker</servlet-name>
 		<url-pattern>/addSpeaker</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>Add Question</servlet-name>
 		<servlet-class>controller.QuestionController</servlet-class>
@@ -21,7 +21,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Add Question</servlet-name>
 		<url-pattern>/addQuestion</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>Load Question</servlet-name>
 		<servlet-class>controller.LoadQuestionController</servlet-class>
@@ -39,6 +39,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Register</servlet-name>
 		<url-pattern>/register</url-pattern>
 	</servlet-mapping>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404.html</location>
+	</error-page>
 
 	<welcome-file-list>
 		<welcome-file>Index.jsp</welcome-file>
